--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "17.0.1",
     "react-icons": "4.2.0",
     "react-router-dom": "5.2.0",
+    "react-router-hash-link": "2.4.0",
     "react-scripts": "4.0.0"
   },
   "devDependencies": {
