--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "4.2.0",
+    "react-markdown": "5.0.3",
     "react-router-dom": "5.2.0",
     "react-router-hash-link": "2.4.0",
-    "react-scripts": "4.0.0"
+    "react-scripts": "4.0.0",
+    "react-syntax-highlighter": "15.4.3",
+    "remark-gfm": "1.0.0"
   },
   "devDependencies": {
     "typescript": "4.1.3"
